-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.0
-
None
-
Qt 5.3.0, Windows 8.1, Dell s2240t multitouch monitor.
-
Propagate source/flags to QGV-Mouse events: bae7435f61e68711b6b8ce056957a146dc1a335e (dev, 26.6.2014, 5.4)
There is some unexpected behaviour in qt 5.3.0 touch event handlers.
Suppose that someone needs to code custom logic when handling touch events. In my case I need to generate right button clicks targeted to QGraphicsScene (on TouchBegin event I send mousePress with QApplication::sendEvent, TouchUpdate - mouseMove, on TouchEnd - mouseRelease).
It was working perfectly in qt 5.1 and 5.2, but when I ported my app to qt 5.3 some uexpected behaviour was noticed. The reason is in unexpected left button events that come right away after touch events. They seem to be generated by inner Qt touch handlers.
Minimal example reproducing this problem: https://github.com/dvvrd/qt-5.3.0-unexpected-touch-events
- relates to
-
QTBUG-39770 MouseArea does not detect touch any more
-
- Closed
-